
* Release 3.01

Compatible with pacman 4.1.

** set_pkg_reason moved to ALPM::DB::Local and renamed set_install_reason.

The ALPM object method was relocated to the ALPM::DB::Local class and I have
renamed it to set_install_reason. This was prompted by the libalpm function
name change from alpm_db_set_pkgreason to alpm_pkg_set_reason.

* Release 3.00

** Major rewrite to continue compatibility with Pacman 4.

I rewrote quit a bit of code in order to continue compatibility with the
new pacman 4. This release comes a bit late after pacman 4 but I was
seriously considering not updating this module anymore. I no longer use
ArchLinux as much as I used to. I tried to keep things as backwards
compatible as possible but there were many changes to the API that reflect
libalpm's many API changes.

** ALPM "handle" objects.

The ALPM class now creates objects when an instance of ALPM is
initialized. In libalpm these are called handles. Here they are simply
objects. You will have to change every class method (ALPM->foo) to use
an ALPM object method instead ($alpm->foo). Luckily I decided to use
class methods years ago so this will be less painful.

*** ALPM errors are stored inside handles.

This makes things more difficult for me. Given an ALPM::DB object, if you
call a method on that object and the method fails, I cannot croak an error
message internally because the ALPM handle is not available.

** ALPM::Group is no longer a class.

Packages groups are now simply lists of packages. When you lookup one
specific group then a list is returned. When querying every single
group (i.e. with ALPM::DB's groups method) a list of name/value pairs
is returned to store it into a hash.

* Release 2.01

** Fix tests to work with custom PKGEXT                              :BUGFIX:

   Tests were failing to work when using a different PKGEXT.

** load_pkgfile error changes to croak instead of die                :BUGFIX:

   A minor problem I found.

* Release 2.00
